--- a/prototypes/ui/assets/scss/component/_topbar.scss
+++ b/prototypes/ui/assets/scss/component/_topbar.scss
@@ -11,6 +11,8 @@
 
 	*{ @include f1-s1(); font-weight: $bold; }
 
+	h1{ transition: .25s ease-in-out;} 
+
 	nav{
 		cursor: pointer;
 		max-height: $baseline;
